# django-docker-poetry-auth-app

./: README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt
app/core/settings/: base.py
docker/dev/: Dockerfile
